@@ -7,35 +7,20 @@ public class L01SortEvenNumbers {
 
     public static void main(String[] args) {
 
-
         Scanner scanner = new Scanner(System.in);
 
         List<Integer> numbers = Arrays.stream(scanner.nextLine().split(", "))
                 .map(Integer::parseInt)
-                .collect(Collectors.toList());
+                .filter(n -> n % 2 == 0)
+                .toList();
 
-        List<Integer> evenNumbers = new ArrayList<>();
+        System.out.println(numbers.stream()
+                .map(String::valueOf)
+                .collect(Collectors.joining(", ")));
 
-        for (Integer number : numbers) {
-            if (number % 2 == 0) {
-                evenNumbers.add(number);
-            }
-        }
-
-        printEvenNumbers(evenNumbers);
-
-        Collections.sort(evenNumbers);
-
-        printEvenNumbers(evenNumbers);
-    }
-
-    private static void printEvenNumbers(List<Integer> list) {
-        for (int i = 0; i < list.size(); i++) {
-            System.out.print(list.get(i));
-            if (i < list.size() - 1) {
-                System.out.print(", ");
-            }
-        }
-        System.out.println();
+        System.out.println(numbers.stream()
+                .sorted()
+                .map(String::valueOf)
+                .collect(Collectors.joining(", ")));
     }
 }
